@@ -1,20 +1,18 @@
 package com.posty.postingapi.mapper;
 
+import com.posty.postingapi.domain.account.Account;
 import com.posty.postingapi.domain.series.Series;
-import com.posty.postingapi.dto.AccountSummary;
-import com.posty.postingapi.dto.PostSummary;
-import com.posty.postingapi.dto.SeriesDetailResponse;
-import com.posty.postingapi.dto.SeriesSummary;
+import com.posty.postingapi.dto.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 public class SeriesMapper {
 
     public static SeriesDetailResponse toSeriesDetailResponse(Series entity, List<String> writers, List<PostSummary> posts) {
         List<AccountSummary> managers = entity.getManagers().stream()
                 .map(AccountMapper::toAccountSummary)
-                .collect(Collectors.toList());
+                .toList();
 
         return new SeriesDetailResponse(
                 entity.getId(),
@@ -31,5 +29,13 @@ public class SeriesMapper {
                 entity.getId(),
                 entity.getTitle()
         );
+    }
+
+    public static Series toEntity(SeriesCreateRequest request, Set<Account> managers) {
+        return Series.builder()
+                .title(request.getTitle())
+                .description(request.getDescription())
+                .managers(managers)
+                .build();
     }
 }
